# robo666-FM-for-robotics

./: .gitignore  LICENSE  README.md
log/: latest_build
src/crisp_controllers/: pyproject.toml
src/crisp_controllers/include/crisp_controllers/: cartesian_controller.hpp
src/crisp_controllers/src/: cartesian_controller.cpp  cartesian_impedance_controller.yaml
src/crisp_gym/: pixi.toml  pyproject.toml
src/crisp_gym/crisp_gym/: manipulator_env.py  manipulator_env_config.py  robot_config.py
src/crisp_gym/crisp_gym/config/: panda_gripper.yaml
src/crisp_gym/crisp_gym/record/: record_functions.py
src/crisp_gym/crisp_gym/teleop/: teleop_sensor_stream.py
src/crisp_gym/examples/: 06_test_teleop.py
src/crisp_gym/scripts/: deploy_policy.py  record_lerobot_format_leader_follower.py
src/crisp_py/: pixi.toml
src/crisp_py/config/control/: default_cartesian_impedance.yaml  gravity_compensation_on_plane.yaml  joint_control.yaml  joint_velocity_control.yaml
src/crisp_py/crisp_py/: __init__.py  robot.py  robot_config.py
src/crisp_py/crisp_py/control/: controller_switcher.py
src/crisp_py/examples/: 04_sporadic_poses.py  08_gripper.py  09_manual_calibration.py  12_franka_gripper.py  gripper_test.py  my_example.py  record_teleop.py
src/crisp_py/log/: latest_build
src/frankapandarobot/: package.xml  robot_config.py  setup.cfg  setup.py
src/lerobot/: pyproject.toml
src/robo666_project/controller/: package.xml
src/robo666_project/franka_gazebo/: CMakeLists.txt  package.xml
src/robo666_project/log/: latest_build
(+10 files in other folders)
